--- a/etl2flat/etl2flat/etl2flat.csproj
+++ b/etl2flat/etl2flat/etl2flat.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{1D8056EB-00A9-4347-903B-EC94807D1171}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>my_console</RootNamespace>
+    <RootNamespace>NewsAn</RootNamespace>
     <AssemblyName>my_console</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
   </PropertyGroup>
@@ -37,6 +37,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlParser.cs" />
+    <Compile Include="RssParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
