--- a/etl2flat/etl2flat/etl2flat.csproj
+++ b/etl2flat/etl2flat/etl2flat.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlParser.cs" />
     <Compile Include="RssParser.cs" />
+    <Compile Include="TableWriter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
