Added StringBuilder usage

--- a/etl2flat/etl2flat/etl2flat.csproj
+++ b/etl2flat/etl2flat/etl2flat.csproj
@@ -41,5 +41,8 @@
     <Compile Include="RssParser.cs" />
     <Compile Include="TableWriter.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
